[MIG]12.0: Migrated the Jasper Report to v12.